test/invalid/unfortunately/polymorphic-row-fields/prop-polymorphic-assign2-this.js
var o2 =  { method: function(x) { x = this; return x; } };

// Should succeed because it's more general than forall a. (this: a, a) -> a
o2.method = function (x) { return x; };

